@@ -1,3 +1,4 @@
+* [Bug 889] avoid malloc() interrupted by SIGIO risk
 * ntpd/refclock_parse.c: cleanup shutdown while the file descriptor is still open.
 * [Bug 885] use emalloc() to get a message at the end of the memory
             unsigned types cannot be less than 0
